<resources>
    <string name="app_name">Espacio de trabajo</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="registro_string">Registro</string>
    <string name="ingrese_los_siguientes_datos__string">Ingrese los siguientes datos.</string>
    <string name="dni_string">DNI</string>
    <string name="nombre_string">Nombre</string>
    <string name="password_string">Password</string>
    <string name="inicia_sesi_n_string">Inicia sesion</string>
    <string name="_99999999_string">99999999</string>
    <string name="introduce_tu_contrase_a_string">Introduce tu contraseña</string>
    <string name="___ya_tienes_cuenta__inicia_sesi_n_string">Ya tienes cuenta? Inicia sesion</string>
    <string name="ejemplo_string">Apellidos</string>
    <string name="ejemplo2_string">Nombres</string>
    <string name="fiesta_string">Fiesta</string>
    <string name="entrada__09_09_2022_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__string">Hora:13:00 p.m.</string>
    <string name="fiesta_ek1_string">Fiesta</string>
    <string name="entrada__09_09_2022_ek1_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__ek1_string">Hora:13:00 p.m.</string>
    <string name="fiesta_ek2_string">Fiesta</string>
    <string name="entrada__09_09_2022_ek2_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__ek2_string">Hora:13:00 p.m.</string>
    <string name="inicio_ek1_string">Inicio</string>
    <string name="perfil_string">Perfil</string>
    <string name="configuraci_n_string">Configuracion</string>
    <string name="fiesta_ek3_string">Fiesta</string>
    <string name="entrada__09_09_2022_ek3_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__ek3_string">Hora:13:00 p.m.</string>
    <string name="mis_eventos_string">Mis Eventos</string>
    <string name="entradas_ek1_string">Entradas</string>
    <string name="perfil_ek1_string">Perfil</string>
    <string name="configuraci_n_ek1_string">Configuracion</string>
    <string name="entradas_ek2_string">Entradas</string>
    <string name="fiesta_ek4_string">Fiesta</string>
    <string name="entrada__09_09_2022_ek4_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__ek4_string">Hora:13:00 p.m.</string>
    <string name="fiesta_ek5_string">Fiesta</string>
    <string name="entrada__09_09_2022_ek5_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__ek5_string">Hora:13:00 p.m.</string>
    <string name="fiesta_ek6_string">Fiesta</string>
    <string name="entrada__09_09_2022_ek6_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__ek6_string">Hora:13:00 p.m.</string>
    <string name="fiesta_ek7_string">Fiesta</string>
    <string name="entrada__09_09_2022_ek7_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__ek7_string">Hora:13:00 p.m.</string>
    <string name="fiesta_ek8_string">Fiesta</string>
    <string name="entrada__09_09_2022_ek8_string">Entrada: 09/09/2022</string>
    <string name="hora_13_00_p_m__ek8_string">Hora:13:00 p.m.</string>
    <string name="eventos_p_blicos_string">Eventos Publicos</string>
    <string name="buscar_evento_string">Buscar evento</string>
    <string name="ingresar_string">Ingresar</string>
    <string name="fiesta_1_string">Fiesta 1</string>
    <string name="_20_583_participantes_9_000_vistas_string">20,583 Participantes 9,000 Vistas</string>
    <string name="el_oeste_de_texas_divide_la_frontera_entre_mexico_y_nuevo_m_xico__es_muy_bella_pero_aspera__llena_de_cactus__en_esta_region_se_encuentran_las_davis_mountains__todo_el_terreno_esta_lleno_de_piedra_caliza__torcidos_arboles_de_mezquite_y_espinosos_nopales__para_admirar_la_verdadera_belleza_desertica__visite_el_parque_nacional_de_big_bend_string">El oeste de Texas divide la frontera entre Mexico y Nuevo Mxico. Es muy bella pero aspera, llena de cactus, en esta region se encuentran las Davis Mountains. Todo el terreno esta lleno de piedra caliza, torcidos arboles de mezquite y espinosos nopales. Para admirar la verdadera belleza desertica, visite el Parque Nacional de Big Bend</string>
    <string name="_3123124_3424_string">3123124 3424</string>
    <string name="csdfesfseff_efdasdasdads_string">csdfesfseff efdasdasdads</string>
    <string name="validar_invitacion_string">Validar Invitacion</string>
    <string name="lista_de_invitados_string">Lista de invitados</string>
    <string name="_20_583_participantes_9_000_vistas_ek1_string">20,583 Participantes 9,000 Vistas</string>
    <string name="el_oeste_de_texas_divide_la_frontera_entre_mexico_y_nuevo_m_xico__es_muy_bella_pero_aspera__llena_de_cactus__en_esta_region_se_encuentran_las_davis_mountains__todo_el_terreno_esta_lleno_de_piedra_caliza__torcidos_arboles_de_mezquite_y_espinosos_nopales__para_admirar_la_verdadera_belleza_desertica__visite_el_parque_nacional_de_big_bend_ek1_string">El oeste de Texas divide la frontera entre Mexico y Nuevo Mxico. Es muy bella pero aspera, llena de cactus, en esta region se encuentran las Davis Mountains. Todo el terreno esta lleno de piedra caliza, torcidos arboles de mezquite y espinosos nopales. Para admirar la verdadera belleza desertica, visite el Parque Nacional de Big Bend</string>
    <string name="_3123124_3424_ek1_string">3123124 3424</string>
    <string name="csdfesfseff_efdasdasdads_ek1_string">csdfesfseff efdasdasdads</string>
    <string name="fiesta_1_ek1_string">Fiesta 1</string>
    <string name="crear_evento_nuevo_string">Crear Evento Nuevo</string>
    <string name="crear_evento_ek3_string">Crear evento</string>
    <string name="configuraci_n_ek2_string">Configuracin</string>
    <string name="inicio_ek4_string">Inicio</string>
    <string name="inicio_ek5_string">Inicio</string>
    <string name="perfil_ek2_string">Perfil</string>
    <string name="entradas_ek3_string">Entradas</string>
    <string name="lectura_qr_string">Lectura QR</string>
    <string name="verficaci_n_string">Verficacion </string>
    <string name="nombre_base_de_datos_string">Nombre base de datos</string>
    <string name="dni_base_de_datos_string">DNI base de datos</string>
    <string name="verficaci_n_ek1_string">Verficacion </string>
    <string name="t_rminos_y_condiciones_string">Terminos y Condiciones</string>
    <string name="el_oeste_de_texas_divide_la_frontera_entre_mexico_y_nuevo_m_xico__es_muy_bella_pero_aspera__llena_de_cactus__en_esta_region_se_encuentran_las_davis_mountains__todo_el_terreno_esta_lleno_de_piedra_caliza__torcidos_arboles_de_mezquite_y_espinosos_nopales__para_admirar_la_verdadera_belleza_desertica__visite_el_parque_nacional_de_big_bend_el_oeste_de_texas_divide_la_frontera_entre_mexico_y_nuevo_m_xico__es_muy_bella_pero_aspera__llena_de_cactus__en_esta_region_se_encuentran_las_davis_mountains__todo_el_terreno_esta_lleno_de_piedra_caliza__torcidos_arboles_de_mezquite_y_espinosos_nopales__para_admirar_la_verdadera_belleza_desertica__visite_el_parque_nacional_de_big_bend_el_oeste_de_texas_divide_la_frontera_entre_mexico_y_nuevo_m_xico__es_muy_bella_pero_aspera__llena_de_cactus__en_esta_region_se_encuentran_las_davis_mountains__todo_el_terreno_esta_lleno_de_piedra_caliza__torcidos_arboles_de_mezquite_y_espinosos_nopales__para_admirar_la_verdadera_belleza_desertica__visite_el_parque_nacional_de_big_bend_string">El oeste de Texas divide la frontera entre Mexico y Nuevo Mxico. Es muy bella pero aspera, llena de cactus, en esta region se encuentran las Davis Mountains. Todo el terreno esta lleno de piedra caliza, torcidos arboles de mezquite y espinosos nopales. Para admirar la verdadera belleza desertica, visite el Parque Nacional de Big BendEl oeste de Texas divide la frontera entre Mexico y Nuevo Mxico. Es muy bella pero aspera, llena de cactus, en esta region se encuentran las Davis Mountains. Todo el terreno esta lleno de piedra caliza, torcidos arboles de mezquite y espinosos nopales. Para admirar la verdadera belleza desertica, visite el Parque Nacional de Big BendEl oeste de Texas divide la frontera entre Mexico y Nuevo Mxico. Es muy bella pero aspera, llena de cactus, en esta region se encuentran las Davis Mountains. Todo el terreno esta lleno de piedra caliza, torcidos arboles de mezquite y espinosos nopales. Para admirar la verdadera belleza desertica, visite el Parque Nacional de Big Bend</string>
    <string name="aceptar_string">Aceptar</string>
    <string name="lista_de_invitados_ek4_string">Lista de invitados</string>
    <string name="juan_perez_121212123_string">Juan Perez121212123</string>
    <string name="juan_perez_121212123_ek1_string">Juan Perez121212123</string>
    <string name="juan_perez_121212123_ek2_string">Juan Perez121212123</string>
    <string name="juan_perez_121212123_ek3_string">Juan Perez121212123</string>
    <string name="juan_perez_121212123_ek4_string">Juan Perez121212123</string>
    <string name="juan_perez_121212123_ek5_string">Juan Perez121212123</string>
    <string name="juan_perez_121212123_ek6_string">Juan Perez121212123</string>
    <string name="juan_perez_121212123_ek7_string">Juan Perez121212123</string>
    <string name="perfil_ek6_string">Perfil</string>
    <string name="pepitoooooo_string">Pepitoooooo</string>
    <string name="pepitoooooo_ek1_string">Pepitoooooo</string>
    <string name="pepitoooooo_ek2_string">Pepitoooooo</string>
    <string name="_47273001_string">47273001</string>
    <string name="inicio_ek6_string">Inicio</string>
    <string name="inicio_ek7_string">Inicio</string>
    <string name="configuraci_n_ek4_string">Configuracion</string>
    <string name="entradas_ek4_string">Entradas</string>
    <string name="cerrar_sesi_n_string">Cerrar sesion</string>
    <string name="inicio_de_sesi_n_string">Inicio de sesion</string>
    <string name="inicia_sesi_n_ek1_string">Inicia sesion</string>
    <string name="introduce_tu_contrase_a_ek1_string">Introduce tu contraseña</string>
    <string name="___no_tienes_cuenta__registrate_string">No tienes cuenta? Registrate</string>
    <string name="_999999999_string">999999999</string>
    <string name="__deja_que_tu_smartphone_sea_el_gerente_de_tu_evento__string">Deja que tu smartphone sea el gerente de tu evento!</string>
    <string name="c_digo_qr_string">Codigo QR</string>
    <string name="privacidad_ek4_string">Privacidad</string>
    <string name="apellidos">Apellidos</string>
    <string name="register">Registrarse</string>
</resources>