<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/page_perfil_ek4"
    android:layout_marginTop="0dp"
    android:layout_marginStart="0dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:id="@+id/bg_perfil_ek5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/_bg__perfil_ek5_shape" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/rectangle_13_ek8"
            android:layout_width="389dp"
            android:layout_height="66dp"
            android:layout_marginTop="0dp"
            android:contentDescription="rectangle_13_ek8"
            android:src="@drawable/rectangle_13_ek8" />

        <TextView
            android:id="@+id/perfil_ek6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="16dp"
            android:text="@string/perfil_ek6_string"
            android:textColor="@color/registro_color"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/pepitoooooo"
        android:layout_width="178dp"
        android:layout_height="46dp"
        android:layout_below="@+id/nombre_"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="20dp"
        android:text="@string/pepitoooooo_string"
        android:textColor="@color/registro_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pepitoooooo_ek1"
        android:layout_width="178dp"
        android:layout_height="46dp"
        android:layout_below="@+id/apellido_paterno_"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="20dp"
        android:text="@string/pepitoooooo_ek1_string"
        android:textColor="@color/registro_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pepitoooooo_ek2"
        android:layout_width="178dp"
        android:layout_height="46dp"
        android:layout_below="@+id/apellido_materno_"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="20dp"
        android:text="@string/pepitoooooo_ek2_string"
        android:textColor="@color/registro_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/_47273001"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:layout_below="@+id/dni_"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="20dp"
        android:text="@string/_47273001_string"
        android:textColor="@color/registro_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="660dp">

        <RelativeLayout
            android:id="@+id/group_4_ek3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp">

            <TextView
                android:id="@+id/inicio_ek7"
                android:layout_width="60.5dp"
                android:layout_height="28.5dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="46dp"
                android:text="@string/inicio_ek7_string"
                android:textColor="@color/registro_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/vector_ek22"
                android:layout_width="47dp"
                android:layout_height="40dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="vector_ek22"
                android:src="@drawable/vector_ek22" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/group_2_ek2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="204dp">

            <ImageView
                android:id="@+id/perfil_ek7"
                android:layout_width="40dp"
                android:layout_height="18dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="46dp"
                android:contentDescription="perfil_ek7"
                android:src="@drawable/perfil_ek7" />

            <ImageView
                android:id="@+id/vector_ek23"
                android:layout_width="34dp"
                android:layout_height="21dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="22dp"
                android:contentDescription="vector_ek23"
                android:src="@drawable/vector_ek23" />

            <ImageView
                android:id="@+id/vector_ek24"
                android:layout_width="20dp"
                android:layout_height="26dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="0dp"
                android:contentDescription="vector_ek24"
                android:src="@drawable/vector_ek24" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/group_39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="266dp">

            <TextView
                android:id="@+id/configuraci_n_ek4"
                android:layout_width="101dp"
                android:layout_height="22dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="47dp"
                android:text="@string/configuraci_n_ek4_string"
                android:textColor="@color/registro_color"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/configuraciones_1_ek2"
                android:layout_width="47dp"
                android:layout_height="44dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="0dp"
                android:contentDescription="configuraciones_1_ek2"
                android:src="@drawable/configuraciones_1_ek2" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/group_1_ek2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp">

            <TextView
                android:id="@+id/entradas_ek4"
                android:layout_width="86.5dp"
                android:layout_height="28.5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="44dp"
                android:text="@string/entradas_ek4_string"
                android:textColor="@color/registro_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/evento_1_ek2"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="0dp"
                android:contentDescription="evento_1_ek2"
                android:src="@drawable/evento_1_ek2" />

        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/nombre_"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="80dp"
        android:contentDescription="nombre_"
        android:src="@drawable/nombre_" />

    <ImageView
        android:id="@+id/apellido_paterno_"
        android:layout_width="202dp"
        android:layout_height="29dp"
        android:layout_below="@+id/pepitoooooo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:contentDescription="apellido_paterno_"
        android:src="@drawable/apellido_paterno_" />

    <ImageView
        android:id="@+id/apellido_materno_"
        android:layout_width="209dp"
        android:layout_height="29dp"
        android:layout_below="@+id/pepitoooooo_ek1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:contentDescription="apellido_materno_"
        android:src="@drawable/apellido_materno_" />

    <ImageView
        android:id="@+id/dni_"
        android:layout_width="49dp"
        android:layout_height="29dp"
        android:layout_below="@+id/pepitoooooo_ek2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:contentDescription="dni_"
        android:src="@drawable/dni_" />

    <ImageView
        android:id="@+id/mas_completo_pronto____"
        android:layout_width="249dp"
        android:layout_height="24dp"
        android:layout_below="@+id/_rectangle_16_ek1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:contentDescription="mas_completo_pronto____"
        android:src="@drawable/mas_completo_pronto______" />

    <Button
        android:id="@+id/_rectangle_16_ek1"
        android:layout_width="190.5dp"
        android:layout_height="50dp"
        android:layout_below="@+id/_47273001"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/_rectangle_16_ek1"
        android:contentDescription="_rectangle_16_ek1"
        android:text="@string/cerrar_sesi_n_string"
        android:textColor="@color/registro_color"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>